fix: removal of horizontal scrolling during race

--- a/src/style.scss
+++ b/src/style.scss
@@ -111,3 +111,8 @@ input {
   display: flex;
   align-items: center;
 }
+
+.img-main {
+  width: 100%;
+  overflow: hidden;
+}
